[gd_scene load_steps=8 format=2]

[ext_resource path="res://BackgroundResources/ProgressBarBackground.tres" type="StyleBox" id=1]
[ext_resource path="res://BackgroundResources/HealthBarRed.tres" type="StyleBox" id=2]
[ext_resource path="res://BackgroundResources/ManaBarBlue.tres" type="StyleBox" id=3]
[ext_resource path="res://Fonts/MainFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/LightFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/BattlerInfoPanel.gd" type="Script" id=6]
[ext_resource path="res://BackgroundResources/TextWindowViolet.tres" type="StyleBox" id=7]

[node name="BattlerInfoPanel" type="PanelContainer"]
margin_right = 80.0
margin_bottom = 126.0
rect_min_size = Vector2( 100, 0 )
custom_styles/panel = ExtResource( 7 )
script = ExtResource( 6 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 132.0
margin_bottom = 126.0

[node name="NamePanel" type="PanelContainer" parent="VBox"]
margin_right = 132.0
margin_bottom = 27.0
custom_styles/panel = ExtResource( 7 )

[node name="NameLabel" type="Label" parent="VBox/NamePanel"]
margin_right = 132.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 4 )
text = "BattlerName"

[node name="HealthBar" type="ProgressBar" parent="VBox"]
margin_top = 31.0
margin_right = 132.0
margin_bottom = 51.0
rect_min_size = Vector2( 50, 20 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
custom_styles/fg = ExtResource( 2 )
custom_styles/bg = ExtResource( 1 )
value = 40.0
percent_visible = false

[node name="HealthLabel" type="Label" parent="VBox/HealthBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -13.5
margin_right = 66.0
margin_bottom = 13.5
custom_fonts/font = ExtResource( 5 )
text = "HealthValue"
align = 1
valign = 1

[node name="ManaBar" type="ProgressBar" parent="VBox"]
margin_top = 55.0
margin_right = 132.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 20 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
custom_styles/fg = ExtResource( 3 )
custom_styles/bg = ExtResource( 1 )
value = 40.0
percent_visible = false

[node name="ManaLabel" type="Label" parent="VBox/ManaBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -13.5
margin_right = 54.0
margin_bottom = 13.5
custom_fonts/font = ExtResource( 5 )
text = "ManaValue"
align = 1
valign = 1

[node name="N2" type="Control" parent="."]
margin_right = 132.0
margin_bottom = 126.0
